прототип взаимодействия объектов при столкновении

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>runner
+    <title>prw
     </title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="mainBox" id="mainBox">
     </div>
-    <script src="./js/script.js"></script>
-    <!--<script src="./js/beta.js"></script>-->
+    <!--<script src="./js/script.js"></script>-->
+    <script src="./js/beta.js"></script>
 </body>
 </html>
