--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="mainBox" id="mainBox">
     </div>
     <!--<script src="./js/script.js"></script>-->
-    <script src="./js/beta.js"></script>
+    <script src="./js/solar.js"></script>
+    <!--<script src="./js/beta.js"></script>-->
 </body>
 </html>
